
=== ppracer 0.5 alpha2 ===

2006-01-09  Volker Stroebel <volker@planetpenguin.de>
	* src/main.cpp src/stuff.cpp
	added --keep-config command line option

2006-01-04  Volker Stroebel <volker@planetpenguin.de>
	* configure.in
	added extra checks for X libraries (Simon80)

2006-01-02  Volker Stroebel <volker@planetpenguin.de>
	* src/game_over.*
	fixed mouseButtonEvent()
	
	* src/paused.cpp
	resume if escape is pressed

2006-01-01  Volker Stroebel <volker@planetpenguin.de>
	* src/viewfrustum.*
	added class ViewFrustum and global instance

2005-12-29  Volker Stroebel <volker@planetpenguin.de>
	* src/ftgl/ src/ppogl/font/*
	moved ftgl code to ppogl
	merged class FTTextureFont with class FTFont
	merged class FTTextureGlyph with class FTGlyph
	replaced FTPoint with ppogl::Vec2d
	use ppogl::Singleton for FTLibrary
	use ppogl::RefObject for FTFont
	removed unused code and files
	code cleanups and minor changes

2005-12-22  Volker Stroebel <volker@planetpenguin.de>
	* src/ftgl/FTList.h
	removed unsued files
	
	* src/squirrel/* src/sqstdlib/*
	updated squirrel to 2.1_w3
	
	* src/phys_sim.cpp
	removed unused code

2005-12-13  Nix  <nix@esperi.org.uk>
        * configure.in (ppdatadir): Expand at make time; dereference
        if a symlink.

2005-11-30  Volker Stroebel <volker@planetpenguin.de>
	* src/quadtree.cpp src/trackmarks.*
	  src/course_renderer.* src/course_load.cpp
	  src/winsys.cpp src/hier.*
	fixed memory deallocation

2005-11-29  Volker Stroebel <volker@planetpenguin.de>
	* src/hud.*
	fixed drawing if resolution changes
	
	* src/ppogl/font.*
	use const ppogl::Vec2d&
	
	* src/loop.* src/credits.* src/splash_screen.*
	changed code to use ppogl::Vec2i

2005-11-28  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	changed some code to use ppogl::Vec2i

2005-11-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/vec2i.*
	added ppogl::Vec2i
	
	* src/phys_sim.cpp
	used ppogl::Vec2i

2005-11-26  Volker Stroebel <volker@planetpenguin.de>
	* src/tux_shadow.cpp